--- a/case2.index.html
+++ b/case2.index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Case02</title>
+    <link rel="stylesheet" href="Assets/normalize.css/normalize.css">
+    <link rel="stylesheet" href="Assets/fontAwesome/fontawesome-free-6.5.1-web/css/all.min.css">
+
+    <style>
+
+    </style>
+
 </head>
 <body>
-
+    <script src="Assets/fontAwesome/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 </body>
 </html>
