--- a/case1.index.html
+++ b/case1.index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Case01</title>
@@ -7,9 +7,115 @@
     <link rel="stylesheet" href="Assets/fontAwesome/fontawesome-free-6.5.1-web/css/all.min.css">
 
     <style>
+
+        /*
+        section>div {
+            background-color: purple;
+            color: white;
+            width: 250px;
+            height: 60px;
+            margin: 10px 0px;
+
+            position: relative;
+        }
+
+        section>div>h3 {
+            height: fit-content;
+
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 20px;
+            margin: auto;
+
+        }
+
+        section>div>div {
+            height: fit-content;
+
+            position: absolute;
+            right: 20px;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+        }
+        */
+
+        section>div{
+            width: 250px;
+            height: 60px;
+            background-color: purple;
+            border-radius: 0 10px 10px 0;
+            color: white;
+            margin: 30px 0;
+            position: relative;
+        }
+
+        section>div>h3{
+            height: fit-content;
+
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 20px;
+            margin: auto;
+        }
+
+        section>div>div{
+            height: fit-content;
+            position: absolute;
+
+            top: 0;
+            bottom: 0;
+            right: 20px;
+            margin: auto;
+
+        }
+
     </style>
 </head>
 <body>
+    <section>
+        <div class="div">
+            <h3>Menu One</h3>
+
+            <div>
+                <i class="fa-regular fa-address-book"></i>
+            </div>
+        </div>
+
+        <div class="div">
+            <h3>Menu Two</h3>
+
+            <div>
+                <i class="fa-solid fa-truck-medical"></i>
+            </div>
+        </div>
+
+        <div class="div">
+            <h3>Menu Three</h3>
+
+            <div>
+                <i class="fa-solid fa-car"></i>
+            </div>
+        </div>
+
+        <div class="div">
+            <h3>Menu Four</h3>
+
+            <div>
+                <i class="fa-solid fa-train"></i>
+            </div>
+        </div>
+
+        <div class="div">
+            <h3>Menu Five</h3>
+
+            <div>
+                <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+        </div>
+    </section>
     <script src="Assets/fontAwesome/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 </body>
 </html>
