--- a/case4.index.html
+++ b/case4.index.html
@@ -7,11 +7,45 @@
     <link rel="stylesheet" href="Assets/fontAwesome/fontawesome-free-6.5.1-web/css/all.min.css">
 
     <style>
+        section>div{
+            width:10px;
+            aspect-ratio: 1/1;
+            border-radius: 100px;
+            border: 4px red solid;
 
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
+
+            animation-duration: 3s;
+            animation-name: waterDrop;
+
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+
+        @keyframes waterDrop {
+            from{
+                width: 10px;
+                aspect-ratio: 1/1;
+            }
+            to{
+                width: 200px;
+                aspect-ratio: 1/1;
+                opacity: 0;
+            }
+        }
     </style>
 
 </head>
 <body>
+
+    <section>
+        <div></div>
+    </section>
 <script src="Assets/fontAwesome/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 </body>
 </html>
