--- a/case1.index.html
+++ b/case1.index.html
@@ -7,39 +7,14 @@
     <link rel="stylesheet" href="Assets/fontAwesome/fontawesome-free-6.5.1-web/css/all.min.css">
 
     <style>
-
-        /*
-        section>div {
-            background-color: purple;
-            color: white;
-            width: 250px;
-            height: 60px;
-            margin: 10px 0px;
-
-            position: relative;
-        }
-
-        section>div>h3 {
+        section {
             height: fit-content;
-
             position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 20px;
-            margin: auto;
-
-        }
-
-        section>div>div {
-            height: fit-content;
-
-            position: absolute;
-            right: 20px;
             top: 0;
             bottom: 0;
             margin: auto;
         }
-        */
+
 
         section>div{
             width: 250px;
@@ -47,13 +22,15 @@
             background-color: purple;
             border-radius: 0 10px 10px 0;
             color: white;
-            margin: 30px 0;
             position: relative;
+            margin: 30px 0 30px -190px;
+            cursor: pointer;
+
+            transition-duration: 1s;
         }
 
         section>div>h3{
             height: fit-content;
-
             position: absolute;
             top: 0;
             bottom: 0;
@@ -71,6 +48,11 @@
             margin: auto;
 
         }
+
+        section>div:hover {
+            margin-left: 0;
+        }
+
 
     </style>
 </head>
