--- a/case5.index.html
+++ b/case5.index.html
@@ -2,52 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Case05</title>
-    <link rel="stylesheet" href="Assets/normalize.css/normalize.css">
-    <link rel="stylesheet" href="Assets/fontAwesome/fontawesome-free-6.5.1-web/css/all.min.css">
+    <title>case-05</title>
+    <link href="assets/normilize_css" rel="stylesheet">
 
     <style>
-        main{
+        body{
+            overflow: hidden;
+        }
+
+        #main{
             width: 50vw;
-            height: 70vh;
-            border: 3px red solid ;
+            height: 50vh;
+            border: 3px solid red;
+
             position: absolute;
+            top: 0;
             left: 0;
             right: 0;
-            top: 0;
             bottom: 0;
             margin: auto;
 
-            animation-name: slider;
+            overflow: hidden;
         }
 
-        main>section{
+        section{
             width: 200vw;
             height: 200vh;
             display: flex;
+
+            animation-name: slider;
+            animation-duration: 3s;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
+
+
         }
 
         main>section>div{
             width: 50vw;
-            height: 70vh;
+            height: 50vh;
             background-color: #ff253a;
+
+
         }
 
+        main>section>div:first-child{
+            background-image: url("assets/img/1.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        main>section>div:nth-child(2){
+            background-image: url("assets/img/2.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+
+        }
+
+        main>section>div:nth-child(3){
+            background-image: url("assets/img/3.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        main>section>div:nth-child(4){
+            background-image: url("assets/img/4.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+
+        }
+
+
         @keyframes slider {
+            0% ,20%  {
+                transform: translateX(0%);
+            }
+            25% ,45%  {
+                transform: translateX(-25%);
+            }
+            50% ,70% {
+                transform: translateX(-50%);
+            }
+            75% ,100% {
+                transform: translateX(-75%);
+            }
 
         }
     </style>
-
 </head>
 <body>
-    <main>
-        <section>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
-    </main>
-<script src="Assets/fontAwesome/fontawesome-free-6.5.1-web/js/all.min.js"></script>
+<main id="main">
+
+    <section>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+
+</main>
 </body>
 </html>
